# WMRL

./: .gitignore  README.md  main_wmrl_qwenpi.py  pyproject.toml  requirements.txt
config/: lewm.yaml  qwen35vlPI_libero.yaml  wmrl_qwenpi.yaml
evaluation/: wm_res.py
jepo/: main_jepo_qwenpi.py  pyproject.toml  requirements.txt  run3reward.sh
jepo/config/: jepo_qwenpi.yaml
jepo/jepo/: __init__.py
jepo/jepo/trainer/: __init__.py  jepo_trainer.py
jepo/jepo/workers/: __init__.py  actor_rollout_worker.py  lewm_reward_worker.py
jepo/tests/: test_jepo_rewards.py
lewm/: __init__.py  batch_train_wm.sh  environment.json  environment_v1.json  environment_v2.json  eval.sh  jepa.py  libero_dataset.py  pyproject.toml  requirements_frozen_v1.txt  train.py  train_wm.sh  utils.py
lewm/config/eval/: lewm_libero.yaml
lewm/eval/: __init__.py  batch_run_eval_libero.sh  libero_episodes.py  metrics.py  model_builder.py  rollout.py  run.py  run_eval_libero.sh
lewm/eval/eval_outputs/libero_embed_eval/: metrics.json  metrics.txt  run_config.yaml
lewm/eval/eval_outputs/libero_embed_eval/embodied_lewm_stage1/: metrics.json  metrics.txt  run_config.yaml
lewm/eval/eval_outputs/libero_embed_eval/embodied_lewm_stage2/: metrics.json  metrics.txt  run_config.yaml
lewm/eval/eval_outputs/libero_embed_eval/embodied_lewm_stage3/: metrics.json  metrics.txt  run_config.yaml
lewm/lightning_logs/version_0/: hparams.yaml  metrics.csv
lewm/lightning_logs/version_1/: hparams.yaml  metrics.csv
lewm/lightning_logs/version_2/: hparams.yaml  metrics.csv
scripts/: batch_wmrl_qwenpi.sh  (+2 more)
(+90 files in other folders)
